# atmaCup-CoffeeReview

./: .gitignore  pyproject.toml
config/: exp_001.yaml  exp_002.yaml  exp_003.yaml  exp_004.yaml  exp_005.yaml  exp_006.yaml  exp_007.yaml
notebook/: 001_eda.ipynb  002_feature.ipynb  003_training.ipynb
src/: feature.py  preprocess.py  runner.py  sample.py  trainers.py  utils.py
